Set executor of API server for multi-threading